# MC

./: .cproject  .gitignore  .project  CMakeLists.txt  DecimalToBinary.c  FahrenheitToCelsius.c  MenuChooser.c  Reverse.c  ggT.c  test_bitshifting.c
SW01/: CMakeLists.txt  DecimalToBinary.c  FahrenheitToCelsius.c  MenuChooser.c  SW01.c  SW01.h  ggT.c  makefile
SW02/: CMakeLists.txt  IntegerToString.c  Reverse.c  SW02.c
SW03/: CMakeLists.txt  FirstNameLastName.c  SW03.c
SW05/: CMakeLists.txt  CreateMatrix.c  SW05.c
SW06/: CMakeLists.txt  variable_parameters.c
address_administration/: Address.c  Address.h  AddressFileIO.c  AddressSort.c  CMakeLists.txt  Main.c  makefile  manipulateAddress.c
